adding the routes and links for the different chat systems

--- a/client/view/index.ejs
+++ b/client/view/index.ejs
@@ -15,10 +15,10 @@
 
     <div class="div-nav">
     <nav class="nav">
-      <a class="nav-link" href="#">NFL</a>
-      <a class="nav-link" href="#">NHL</a>
-      <a class="nav-link" href="#">NBA</a>
-      <a class="nav-link" href="#">MLB</a>
+      <a class="nav-link" href="/NFL">NFL</a>
+      <a class="nav-link" href="/NHL">NHL</a>
+      <a class="nav-link" href="/NBA">NBA</a>
+      <a class="nav-link" href="/MLB">MLB</a>
     </nav>
   </div>
   <div class="aboutUs-wrap">
