adding styles to messages

--- a/client/public/chat.css
+++ b/client/public/chat.css
@@ -67,3 +67,7 @@ body {
     
 }
 
+#chatlog { list-style-type: none; margin: 0; padding: 0; }
+      #chatlog > li { padding: 0.5rem 1rem; }
+      #chatlog > li:nth-child(odd) { background: #efefef; }
+
