--- a/client/view/Mlb.ejs
+++ b/client/view/Mlb.ejs
@@ -26,21 +26,23 @@
 
   <form id="form">
     <div class="form-group">
-      <label for="exampleInputEmail1">Name</label>
-      <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Name" name="name">
+      <label for="username">Name</label>
+      <input id="username" type="text" class="form-control" aria-describedby="emailHelp" placeholder="Name" name="name">
       
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Message</label>
-      <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Message" name="message">
+      <input type="text" autocomplete="off" class="form-control" id="exampleInputPassword1" placeholder="Message" name="message">
     </div>
 
     <button type="submit" class="btn btn-primary">Send</button>
   </form>
 
-  <div id="chatlog"class="chatsystem">
+  <div class="chatsystem">
     <small class="small">Never Share Personal Info</small>
-  </div>
+    <ul id="chatlog"></ul>
+    <ul id="namediv"></ul>
+</div>
 
     <!-- Optional JavaScript -->
     <script src="/socket.io/socket.io.js"></script>
