--- a/client/view/Mlb.ejs
+++ b/client/view/Mlb.ejs
@@ -11,7 +11,9 @@
     <title>Sports Talk</title>
   </head>
   <body>
+    <a class="link-title" href="/">
     <h1 class="title" >Sports Talk</h1>
+  </a>
 
     <div class="div-nav">
     <nav class="nav">
@@ -23,7 +25,7 @@
   </div>
 
 
-
+<div class="form-wrap">
   <form id="form">
     <div class="form-group">
       <label for="username">Name</label>
@@ -37,11 +39,13 @@
 
     <button type="submit" class="btn btn-primary">Send</button>
   </form>
-
+</div>
+<div class="chatsystem-wrap">
   <div class="chatsystem">
     <small class="small">Never Share Personal Info</small>
     <ul id="chatlog"></ul>
     <ul id="namediv"></ul>
+</div>
 </div>
 
     <!-- Optional JavaScript -->
