chat system working

--- a/client/view/Mlb.ejs
+++ b/client/view/Mlb.ejs
@@ -43,8 +43,8 @@
 <div class="chatsystem-wrap">
   <div class="chatsystem">
     <small class="small">Never Share Personal Info</small>
+    <small class="small" >MLB</small>
     <ul id="chatlog"></ul>
-    <ul id="namediv"></ul>
 </div>
 </div>
 
