--- a/client/view/index.ejs
+++ b/client/view/index.ejs
@@ -15,10 +15,10 @@
 
     <div class="div-nav">
     <nav class="nav">
-      <a class="nav-link" href="sporttalk.netlify.app/NFL">NFL</a>
-      <a class="nav-link" href="sporttalk.netlify.app/NHL">NHL</a>
-      <a class="nav-link" href="sporttalk.netlify.app/NBA">NBA</a>
-      <a class="nav-link" href="sporttalk.netlify.app/MLB">MLB</a>
+      <a class="nav-link" href="/NFL">NFL</a>
+      <a class="nav-link" href="/NHL">NHL</a>
+      <a class="nav-link" href="/NBA">NBA</a>
+      <a class="nav-link" href="/MLB">MLB</a>
     </nav>
   </div>
   <div class="aboutUs-wrap">
