--- a/client/view/Nba.ejs
+++ b/client/view/Nba.ejs
@@ -11,16 +11,16 @@
     <title>Sports Talk</title>
   </head>
   <body>
-    <a class="link-title" href="sporttalk.netlify.app/">
+    <a class="link-title" href="/">
     <h1 class="title" >Sports Talk</h1>
   </a>
 
     <div class="div-nav">
     <nav class="nav">
-      <a class="nav-link" href="sporttalk.netlify.app/NFL">NFL</a>
-      <a class="nav-link" href="sporttalk.netlify.app/NHL">NHL</a>
-      <a class="nav-link" href="sporttalk.netlify.app/NBA">NBA</a>
-      <a class="nav-link" href="sporttalk.netlify.app/MLB">MLB</a>
+      <a class="nav-link" href="/NFL">NFL</a>
+      <a class="nav-link" href="/NHL">NHL</a>
+      <a class="nav-link" href="/NBA">NBA</a>
+      <a class="nav-link" href="/MLB">MLB</a>
     </nav>
   </div>
 
